--- a/test/runner.html
+++ b/test/runner.html
@@ -9,8 +9,12 @@
     <body>
         <div id="mocha"></div>
 
-        <script src="../node_modules/should/should.js"></script>
         <script src="../node_modules/mocha/mocha.js"></script>
+        <script src="../node_modules/chai/chai.js"></script>
+        <script src="../node_modules/sinon/pkg/sinon.js"></script>
+        <script src="vendor/jquery-1.11.3.min.js"></script>
+        <script src="vendor/velocity.min.js"></script>
+        <script src="../dist/jquery.offcanvas.min.js"></script>
         <script>mocha.setup('bdd')</script>
         <script src="plugin.js"></script>
         <script>
