--- a/test/runner.html
+++ b/test/runner.html
@@ -4,6 +4,7 @@
         <title>Mocha</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../dist/jquery.offcanvas.min.css" />
         <link rel="stylesheet" href="../node_modules/mocha/mocha.css" />
     </head>
     <body>
