reverted to es5, switched to eslint

--- a/test/runner.html
+++ b/test/runner.html
@@ -4,7 +4,7 @@
         <title>Mocha</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../dist/jquery.offcanvas.min.css" />
+        <link rel="stylesheet" href="../src/jquery.offcanvas.css" />
         <link rel="stylesheet" href="../node_modules/mocha/mocha.css" />
     </head>
     <body>
@@ -15,7 +15,7 @@
         <script src="../node_modules/sinon/pkg/sinon.js"></script>
         <script src="vendor/jquery-1.11.3.min.js"></script>
         <script src="vendor/velocity.min.js"></script>
-        <script src="../dist/jquery.offcanvas.min.js"></script>
+        <script src="../src/jquery.offcanvas.js"></script>
         <script>mocha.setup('bdd')</script>
         <script src="plugin.js"></script>
         <script>
